# scikit-learn-like-backprop

./: Cargo.toml
src/: lib.rs
src/datasets/: error.rs  minst.rs  mod.rs  open_ml.rs  petals.rs  web_access.rs  xor.rs
src/model/: error.rs  model.rs
src/openml/: minst.rs  mod.rs  open_ml.rs  web_access.rs
