[package]
name = "sklearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
arff = "0.3.0"
polars = {version = "0.41.3", features = ["dtype-u8"]}
polars-core = {version="0.41.3", features = ["ndarray"]}
ndarray = "0.16.0"
curl = "0.4.46"
serde_json = "1.0.1"
anyhow = "1.0.86"
thiserror = "1.0.63"